Make site build work again.