@@ -430,7 +430,6 @@
           -->
           <inputExcludes combine.children="append">
             <inputExclude>.java-version</inputExclude>
-            <inputExclude>**/zipcodes.txt</inputExclude>
             <inputExclude>**/.gitignore</inputExclude>
             <inputExclude>**/derby.log</inputExclude>
             <inputExclude>**/META-INF/services/javax.*</inputExclude>
@@ -480,23 +479,6 @@
                 <phase>none</phase>
               </execution>
             </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>javaNinePlus</id>
-      <activation>
-        <jdk>[9,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-            </configuration>
           </plugin>
         </plugins>
       </build>
